fixed responsiveness on mobile, still iffy on iPad.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
 .game__container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 5px;
   height: 100%;
 }
@@ -123,6 +123,8 @@ body {
   font-family: "Rye", cursive;
 }
 .game_buttons__container {
+  grid-column: 1 / 4;
+  grid-row: 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -264,8 +266,10 @@ a {
   text-decoration: none;
   cursor: pointer;
 } */
-
 @media only screen and (max-width: 1024px) {
+  :root {
+    height: initial;
+  }
   .keyboard {
     grid-column: 2 / 4;
     grid-row: 2;
@@ -283,65 +287,72 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: none;
-    background-color: #df554e;
-    width: 100%;
-    height: 80%;
   }
-
-  @media only screen and (max-width: 600px) {
-    * {
-      box-sizing: border-box;
-    }
-
-    body,
-    .game__container {
-      display: flex;
-      text-align: center;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      box-sizing: content-box;
-    }
-    .modal__content {
-      background-color: #fbdb79;
-      margin: 40% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      color: black;
-      font-size: 20px;
-      text-align: center;
-      opacity: 0.9;
-    }
-    .keyboard {
-      grid-column: 2 / 4;
-      grid-row: 2;
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-      grid-row-gap: 10px;
-      justify-content: center;
-      align-items: center;
-      padding: 75px 100px 50px 100px;
-    }
-    .blank_style {
-      border-bottom: 2px solid black;
-      margin: 4px;
-      height: 20px;
-      width: 20px;
-      text-align: center;
-      font-size: 0px;
-      padding-left: 10px;
-      padding-right: 10px;
-    }
-    .display_word {
-      font-size: 14px;
-      margin: 1px;
-      width: 10px;
-    }
-    .bottom {
-      display: none;
-    }
+}
+@media only screen and (max-width: 600px) {
+  * {
+    box-sizing: border-box;
+  }
+  :root {
+    height: initial;
+    width: 100%;
+    overflow-x: hidden;
+  }
+  .game__title {
+    padding-bottom: 0px;
+  }
+  body,
+  .game__container {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: content-box;
+    width: 100%;
+  }
+  body {
+    height: 100%;
+    overflow: hidden;
+  }
+  .modal__content {
+    background-color: #fbdb79;
+    margin: 40% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 90%;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+    opacity: 0.9;
+  }
+  .keyboard {
+    grid-column: 2 / 4;
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-row-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    padding: 75px 100px 50px 100px;
+  }
+  .blank_style {
+    border-bottom: 2px solid black;
+    margin: 4px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    font-size: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .display_word {
+    font-size: 14px;
+    margin: 1px;
+    width: 10px;
+  }
+  .bottom {
+    display: none;
   }
 }
